# onda-riparian-2026

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: README.md  app.py
data/restoration/: events.csv
data/sites/: README.md
docs/: blog-field-report.md
notebooks/: 01_site_setup.ipynb  01_site_setup.py  02_landsat_timeseries.py  03_sentinel2_finescale.py  04_sar_moisture.py  05_change_detection.py
notebooks/data/sites/: hay_creek.geojson  pine_creek.geojson  sf_crooked.geojson
outputs/: hay_creek_landsat_annual.csv  hay_creek_sar_annual.csv  pine_creek_landsat_annual.csv  pine_creek_sar_annual.csv  sf_crooked_landsat_annual.csv  sf_crooked_sar_annual.csv
scripts/: make_hero_figure.py  make_sar_comparison.py  make_summary_figure.py  run_all_sites.py  run_all_sites_sar.py
src/onda/: __init__.py  composites.py  indices.py  restoration.py  sites.py  trends.py  viz.py
tests/: test_restoration.py  test_trends.py
