[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onda"
version = "0.1.0"
description = "Riparian NDVI / NDMI / SAR analysis for ONDA restoration sites in eastern Oregon."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brooks Groves", email = "brooks@brooksgroves.com" }]
keywords = ["remote-sensing", "riparian", "ndvi", "landsat", "earth-engine", "oregon"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line-too-long handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
