[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onda"
version = "0.1.0"
description = "Riparian NDVI / NDMI / SAR analysis for ONDA restoration sites in eastern Oregon."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brooks Groves", email = "brooks@brooksgroves.com" }]
keywords = ["remote-sensing", "riparian", "ndvi", "landsat", "earth-engine", "oregon"]

[tool.setuptools.packages.find]
where = ["src"]

# --------------------------------------------------------------------------
# Pixi
# --------------------------------------------------------------------------
[tool.pixi.workspace]
name = "onda-riparian-2026"
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
python = "3.11.*"
earthengine-api = ">=1.6"
geemap = ">=0.35"
leafmap = ">=0.44"
geopandas = ">=1.0"
rasterio = ">=1.4"
rioxarray = ">=0.17"
xarray = ">=2024.9"
pandas = ">=2.2"
numpy = ">=2.0"
scipy = ">=1.14"
statsmodels = ">=0.14"
pymannkendall = "*"
ruptures = "*"
matplotlib = ">=3.9"
jupyterlab = ">=4.2"
ipywidgets = ">=8.1"
jupytext = ">=1.16"

[tool.pixi.pypi-dependencies]
onda = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
ruff = ">=0.7"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
auth = "earthengine authenticate"
lab = "jupyter lab notebooks/"
sync-notebooks = "jupytext --sync notebooks/*.py"

[tool.pixi.feature.dev.tasks]
test = "pytest tests/ -v"
lint = "ruff check src tests"
format = "ruff format src tests"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
